# slack-bot

./: .dockerignore  .gitignore  Dockerfile  MICROSERVICE_ARCHITECTURE.md  README.md  docker-compose.yml  ecr-policy.json  env.example  pyproject.toml  register-task-definition.sh  requirements.txt  task-definition.json
.git_backup_revyl/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_backup_revyl/logs/: HEAD
.github/: ryvn.yml
.github/workflows/: ci.yml  ryvn-slack-bot-release.yaml
ai-microservice/: Dockerfile  README.md  docker-compose.yml  requirements.txt
ai-microservice/src/: main.py
docs/: deployment.md  slack-bot-setup-checklist.md  user-mapping-strategies.md
migrations/: create_slack_installations.sql  create_test_history.sql  create_user_mappings.sql
scripts/: check_user_mappings.py  create_test_table.py  monitor_tunnel.py  sanitize_repo.py  setup_database.py  update_user_mapping.py
src/: main.py
src/api/: ai_bot_routes.py  nl2sql_routes.py
src/auth/: dependencies.py  mapping_service.py  propel.py  propel_routes.py  protected_routes.py  routes.py  store.py  supabase_store.py  user_store.py
src/bot/: client.py  dependencies.py  handlers.py  middleware.py  services.py  types.py
src/config/: __init__.py  settings.py
src/models/: test_history.py  user_mapping.py
src/scripts/: check_propelauth_environment.py  generate_token.py  verify_propelauth_setup.py
tests/: __init__.py  conftest.py  test_handlers.py  test_llm_nl2sql_service.py  test_main.py  test_nl2sql_service.py  test_services.py  test_slack_commands.py
(+42 files in other folders)
